
grsvg_SOURCES+=$(top_srcdir)/RenderIcuLine.cpp \
    $(top_srcdir)/icule/PortableFontInstance.cpp \
    $(top_srcdir)/icule/FontTableCache.cpp \
    $(top_srcdir)/icule/cmaps.cpp \
    $(top_srcdir)/icule/cfonts.cpp \
    $(top_srcdir)/icule/FontObject.cpp

# EXTRA_DIST_GRSVG += $(ac_top_srcdir)/icule/*.h
